# discord-twitch-apscheduler

./: .gitignore  pyproject.toml
bot/: __main__.py  _logging.py  _sched.py  settings.py
bot/_discord/: bot.py  tasks.py
bot/_discord/cogs/: basic.py
bot/_twitch/: bot.py
bot/_twitch/cogs/: basic.py
